@@ -132,10 +132,15 @@ For grid PDFs, the following file content is in a grid format uniform to all PDF
 families: subgrids are delimited by more `---` line separators, and within each
 subgrid the first two lines are lists of the x and Q2 anchor values respectively
 used in that grid. The following lines are the xf values of the PDFs for each
-supported flavour, in order. The flavours are specified as set (or member) metadata, and
-the xf values are listed in increasing order of PDG ID code (e.g. usually -5..5,
-21 or -6..6, 21 for the standard 5 or 6 quark-flavour PDF). The final line should be
-another `---` delimiter to unambiguously declare the end of the final subgrid block.
+supported flavour, each line representing one (x,Q2) grid anchor point. The
+order of the xf lines is that of a nested pair of loops, the outer over x knots
+and the inner over Q2 knots -- hence each subgrid data block is a series of line
+groups, each with a single x value but different Q2 values in its constituent
+lines.  The flavours for which the xf values are listed in each line are
+specified as set (or member) metadata, and the xf values are listed in
+increasing order of PDG ID code (e.g. usually -5..5, 21 or -6..6, 21 for the
+standard 5 or 6 quark-flavour PDF). The final line should be another `---`
+delimiter to unambiguously declare the end of the final subgrid block.
 
 @todo Specify the order in which the (x,Q2) line indices are iterated over
 
